CCE modify