@@ -43,8 +43,8 @@
 export HBASE_OPTS="-XX:+UseConcMarkSweepGC"
 
 # Configure PermSize. Only needed in JDK7. You can safely remove it for JDK8+
-# export HBASE_MASTER_OPTS="$HBASE_MASTER_OPTS -XX:PermSize=128m -XX:MaxPermSize=128m"
-# export HBASE_REGIONSERVER_OPTS="$HBASE_REGIONSERVER_OPTS -XX:PermSize=128m -XX:MaxPermSize=128m"
+export HBASE_MASTER_OPTS="$HBASE_MASTER_OPTS -XX:ReservedCodeCacheSize=256m"
+export HBASE_REGIONSERVER_OPTS="$HBASE_REGIONSERVER_OPTS -XX:ReservedCodeCacheSize=256m"
 
 # Uncomment one of the below three options to enable java garbage collection logging for the server-side processes.
 
@@ -139,5 +139,3 @@ export HBASE_OPTS="-XX:+UseConcMarkSweepGC"
 #SET ENV
 export HBASE_MANAGES_ZK=true
 export JAVA_HOME=/var/vcap/packages/java
-export HBASE_CLASSPATH=/var/vcap/packages/hadoop/etc/hadoop
-# export HBASE_CLASSPATH=$JOB_DIR/config
